<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">KaraokePlayer</string>

    <string name="home_play_karaoke">Play karaoke</string>
    <string name="home_open_directory">Open directory</string>
    <string name="home_edit_karaoke">Edit karaoke</string>
    <string name="home_pitch_detection">Pitch Detector</string>
    <string name="home_settings">Settings</string>
    <string name="home_exit">Exit</string>
    <string name="home_fps">FPS: %1$d</string>

    <string name="player_score_title">Your score is</string>
    <string name="player_score_default_comment">Your voice cannot be heard!</string>
    <string name="player_score_default_value">0</string>
    <string name="player_score_your_voice_cannot_be_heard">Your voice cannot be heard</string>
    <string name="player_score_you_need_to_practice_more">You need to practice more</string>
    <string name="player_score_not_bad">Not bad!</string>
    <string name="player_score_good_job">Good job!</string>
    <string name="player_score_perfect_score">Perfect score</string>

    <string name="directories_title">Directory manager</string>
    <string name="directories_dir_choose_group">Choose group</string>
    <string name="directories_dir_back">Back</string>
    <string name="directories_dir_new">New</string>
    <string name="directories_dir_upload">Upload</string>
    <string name="directories_dir_enter_name">Enter name</string>

    <string name="edit_title">Not supported</string>
    <string name="edit_message">Please visit our website at\n\nhttps://wickykaraokeplayer.vercel.app\n\nin order to edit your own songs.</string>
    <string name="edit_got_it_button">Got it</string>

    <string name="settings_title">Settings</string>
    <string name="settings_general">General</string>
    <string name="settings_lyrics">Lyrics</string>
    <string name="lyrics_outlined_color">Outlined Color</string>
    <string name="lyrics_filled_color">Filled Color</string>

    <string name="pitch_detector_title">Pitch Detector</string>
    <string name="pitch_detector_start">Start</string>
    <string name="pitch_detector_stop">Stop</string>
    <string name="pitch_detector_current_note">Current note: %1$s (%2$d Hz)</string>
    <string name="pitch_detector_last_note">Last note: %1$s (%2$d Hz)</string>
    <string name="pitch_detector_no_note">No note detected</string>
    <string name="pitch_detector_na">N/A</string>
    <string name="pitch_detector_octave">Octave: %1$s</string>
    <string name="pitch_detector_volume">Volume: %1$d%%</string>
    <string name="pitch_detector_instructions_start">Click Start to begin pitch detection</string>
    <string name="pitch_detector_instructions_permission">You\'ll need to grant microphone permission</string>
    <string name="pitch_detector_error_microphone">Microphone access denied</string>
    <string name="pitch_detector_detune_sharp">%1$d cents sharp</string>
    <string name="pitch_detector_detune_flat">%1$d cents flat</string>
</resources>