<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/score_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="0dp"
            android:background="#1F1F1F"
            android:layout_height="281dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/score_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player_score_title"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player_score_default_value"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="80sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/score_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player_score_default_comment"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="34sp" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>